<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#222222"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        style="@style/GTRHeader"
        android:text="@string/sequencer"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="30dp" />
    
    <LinearLayout
        android:layout_marginLeft="50dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
        
        <ToggleButton
            android:id="@+id/effect1"
            android:textOn="@string/effect1"
            android:textOff="@string/effect1"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content" />
            
        <ToggleButton
            android:id="@+id/effect2"
            android:textOn="@string/effect2"
            android:textOff="@string/effect2"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
            
        <ToggleButton
            android:id="@+id/effect3"
            android:textOn="@string/effect3"
            android:textOff="@string/effect3"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
            
    </LinearLayout>
    
    <LinearLayout
        android:layout_marginLeft="50dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp" >
        <ToggleButton
            android:id="@+id/effect4"
            android:textOn="@string/effect4"
            android:textOff="@string/effect4"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
            
        <ToggleButton
            android:id="@+id/effect5"
            android:textOn="@string/effect5"
            android:textOff="@string/effect5"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
         <!--
        <Button
            android:id="@+id/effect6"
            android:text="@string/effect6"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
            -->
    </LinearLayout>
    
    <LinearLayout
        android:layout_marginLeft="50dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <!-- 
        <Button
            android:id="@+id/effect7"
            android:text="@string/effect7"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/effect8"
            android:text="@string/effect8"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
            
        <Button
            android:id="@+id/effect9"
            android:text="@string/effect9"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
            -->
    </LinearLayout>
    
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    
	    <Button
	        android:id="@+id/rewind"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
	        android:text="Rewind"/>
	    <Button
	        android:id="@+id/play"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
	        android:text="Play"/>
	    <Button
	        android:id="@+id/skip"
	        android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
	        android:text="Skip"/>
	    <Button
	        android:id="@+id/loop"
	        android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
	        android:text="Loop"/>
	        
	</LinearLayout>
	
    <Button
        android:id="@+id/back"
        style="@style/GTRMainButton"
        android:text="Main Menu"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="40dp"/>
    

</LinearLayout>
